--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,7 +1,7 @@
-FROM python:3.9-slim-buster
+FROM python:3.10
 
-LABEL Name="Python Flask Demo App" Version=1.4.2
-LABEL org.opencontainers.image.source = "https://github.com/surasravan/Python-Webapp.git"
+LABEL Name="Django-WebApp" Version=1.4.2
+LABEL org.opencontainers.image.source = "https://github.com/surasravan/Django-WebApp.git"
 
 ARG srcDir=src
 WORKDIR /app
@@ -11,6 +11,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY $srcDir/run.py .
 COPY $srcDir/app ./app
 
-EXPOSE 5000
+EXPOSE 8000
 
-CMD ["gunicorn", "-b", "0.0.0.0:5000", "run:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "run:app"]
